--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1",
+    "react-use-gesture": "^7.0.15",
     "styled-components": "^5.1.0",
     "styled-normalize": "^8.0.7"
   },
